# fantasy_baseball_forecasting

./: .env.example  .gitignore  .rscignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: add-tests.md  backfill.md  code-conventions.md  code-review.md  debug-api.md  deploy.md  document-feature.md  new-db-table.md  new-module.md  pipeline-health.md
.github/workflows/: backfill_stats.yml  ci.yml  daily_pipeline.yml  debug_projections.yml  deploy_app.yml  seed_data.yml
config/: league_settings.yaml
docs/: ai_automation_plan.md  development_plan.md  project_description.md
rsconnect-python/: fantasy_baseball_forecasting.json
scripts/: backfill_reports.py  backfill_stats.py  cleanup_bad_weeks.py  debug_projections.py  seed_2025_test.py  seed_motherduck_2025.py  yahoo_auth.py
src/: config.py
src/analysis/: __init__.py  hot_cold.py  lineup_optimizer.py  matchup_analyzer.py  news.py  positions.py  shrinkage.py  waiver_ranker.py
src/api/: mlb_client.py  yahoo_client.py
src/app/: __init__.py  app.py  server.py  stubs.py  ui.py
src/app/www/: styles.css
src/db/: connection.py  loaders_advanced.py  loaders_mlb.py  loaders_news.py  loaders_yahoo.py  schema.py
src/pipeline/: daily_run.py  token_refresh.py
tests/: test_config.py
tests/analysis/: __init__.py  test_hot_cold.py  test_lineup_optimizer.py  test_matchup_analyzer.py  test_news.py  test_positions.py  test_shrinkage.py  test_waiver_ranker.py
tests/api/: test_mlb_client.py  test_yahoo_client.py
tests/app/: __init__.py  test_app.py  test_server_monitoring.py
tests/db/: test_connection.py  test_loaders_advanced.py  test_loaders_news.py  test_mlb_loaders.py  test_schema.py  test_yahoo_loaders.py
tests/integration/: test_pipeline.py
tests/pipeline/: test_daily_run.py  test_token_refresh.py
